# cryptopals

./: .gitignore  .gitmodules  Cargo.toml  README.md
ext/: D_SGT_sampson_dennis.c  mersenne.cpp
src/: bad_hash.rs  bytes.rs  encoding.rs  gauss.rs  good_turing.rs  hamming.rs  language.rs  lib.rs  oracle.rs  user.rs
src/ctr/: bitflip.rs  edit.rs  mod.rs
src/dh/: mod.rs
src/mac/: cbc.rs  hmac.rs  md4.rs  mod.rs  sha1.rs  srp.rs
src/mac/srp/: full.rs  mod.rs  simple.rs
src/mersenne/: mod.rs  mt19937.rs  mt19937_64.rs  password_token.rs  recovery.rs  stream.rs
src/oracle/: cbc.rs  ecb.rs  mod.rs
tests/: common.rs  gauss.rs  lib.rs
tests/res/: set1_challenge4.txt
tests/set_five/: mod.rs
tests/set_four/: mod.rs
tests/set_one/: mod.rs
tests/set_seven/: mod.rs
tests/set_six/: mod.rs
tests/set_three/: mod.rs
tests/set_two/: mod.rs
